syntax = "proto3";
import "google/protobuf/empty.proto";
option csharp_namespace = "gRPC.NETCore.Host";

package stocklistener;

// The greeting service definition.
service StockListener {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (stream HelloReply);
  rpc GetQuotesStream (google.protobuf.Empty) returns (stream QuotesData);
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

message QuotesData {
  string datetime = 1;
  string quote = 2;
}

// The response message containing the greetings.
message HelloReply {
  string message = 1;
}
